<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bank"
        android:icon="@drawable/ic_bank"
        android:title="@string/bank"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/budget"
        android:checked="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/income"
        android:icon="@drawable/ic_wallet"
        android:title="@string/income"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/expenses"
        android:icon="@drawable/ic_expenses"
        android:title="@string/expenses"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/savings"
        android:icon="@drawable/ic_savings"
        android:title="@string/savings"
        app:showAsAction="ifRoom" />
</menu>