<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_relative_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/catamaran"
            android:text="@string/savings_overview"
            android:textSize="14sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnSavingDetails"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="35dp"
            android:text="@string/check_savings_details"
            android:background="@drawable/bg_gradient"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:fontFamily="@font/catamaran"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:gravity="center"
            android:text="@string/please_enter_details_of_your_saving_goal"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_titleSaving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_dialog_edit_text"
            android:hint="@string/goal_title"
            android:inputType="text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_SavingAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_dialog_edit_text"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_DateSaving"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_dialog_edit_text"
                android:enabled="false"
                android:hint="@string/goal_date"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnSelectGoalDate"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_gradient"
                android:text="@string/select_date"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddSavings"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_gradient"
                android:fontFamily="@font/catamaran"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogoUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_savings" />


</RelativeLayout>