<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_relative_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtLookup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/look_up_name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:text="@string/please_enter_the_expenses"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_Amount"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_dialog_edit_text"
            android:hint="@string/amount"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_Notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_dialog_edit_text"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_Date"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_edit_text"
            android:hint="@string/date"
            android:textSize="12sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnToday"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:background="@drawable/bg_gradient"
                android:fontFamily="@font/aclonica"
                android:text="@string/today"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnYesterday"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:background="@color/colorWhite"
                android:fontFamily="@font/aclonica"
                android:text="@string/yesterday"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp" />
            <Button
                android:id="@+id/btnOtherDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:background="@drawable/bg_gradient"
                android:fontFamily="@font/aclonica"
                android:text="@string/other_date"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_gradient"
                android:fontFamily="@font/aclonica"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_coffee" />


</RelativeLayout>